--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
           >
             <!-- message here -->
 
-            <div data-th-replace="message::messagebox"></div>
+            <div data-th-replace="~{message::messagebox}"></div>
 
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
@@ -97,6 +97,25 @@
                 </button>
               </div>
             </form>
+            <div class="flex gap-5 mt-4 justify-center">
+              <!-- Google Button -->
+              <a data-th-href="@{'/oauth2/authorization/google'}" class="flex items-center gap-2 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 
+                        px-5 py-2 rounded-md shadow-sm hover:bg-green-400 dark:hover:bg-green-600 
+                        text-sm font-medium text-gray-800 dark:text-gray-200 transition-colors duration-300">
+                <img src="https://img.icons8.com/color/16/000000/google-logo.png" class="w-5" alt="Google Icon" />
+                Google
+              </a>
+            
+              <!-- GitHub Button -->
+              <a data-th-href="@{'/oauth2/authorization/github'}" class="flex items-center gap-2 bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 
+                        px-5 py-2 rounded-md shadow-sm hover:bg-gray-400 dark:hover:bg-gray-700 
+                        text-sm font-medium text-gray-800 dark:text-gray-200 transition-colors duration-300">
+                <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" class="w-5"
+                  alt="GitHub Icon" />
+                GitHub
+              </a>
+            </div>
+
           </div>
         </div>
       </div>
