--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -7,6 +7,6 @@
 </head>
 <body>
           <h1>This is User Dashboard Page</h1>
-          <a data-th-href="@{'do-logout'}">logout</a>
+          <a data-th-href="@{'../do-logout'}">logout</a>
 </body>
 </html>
