--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -9,7 +9,7 @@
   >
     <a
       href="https://flowbite.com/"
-      class="flex flex-col items-center ps-2.5 mb-8"
+      class="flex flex-col items-center ps-2.5 mb-8" 
     >
       <img
         onerror="this.onerror=null; this.src='https://flowbite.com/docs/images/logo.svg'"
@@ -19,9 +19,7 @@
         alt="Flowbite Logo"
       />
 
-      <span class="text-gray-500" data-th-text="${loggedInUser.name}"
-        >Rajat Patle</span
-      >
+      <span class="text-gray-500" data-th-text="${loggedInUser.name}">Rajat Patle</span>
       <span
         class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
         ><center>Welcome to</center>Smart Contact Manager</span
